Basic Payment Flow with Validations